# takokb_core

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
inc/: takokb.h  takokb_action.h  takokb_configurator.h
src/: action.c  action.h  config.h  configurator.c  configurator.h  debug.c  debug.h  keyboard.c  keyboard.h  keymap.c  keymap.h  matrix.h  report.c  report.h  takokb.c
test/: 0_size.cpp  0_struct_size.cpp  1_key_press.cpp  2_layer.cpp  3_layer_toggle.cpp  4_bottom_layer.cpp  5_tap_key_hold_layer.cpp  6_configurator_get_version.cpp  common.c  common.h  key_press.c
